--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,4 @@
+<%= link_to "Home", root_path %>
+<%= link_to "About Us", about_path %>
 <h1>About us<h/1>
 	<p>We are working on our One Month Rails Pinteresting app!</p>
