--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,9 @@
-<nav class="navbar navbar-inverse navbar-default" role="navigation">
+<nav class="navbar navbar navbar-default" role="navigation">
+  <nav class="navbar navbar-static-top navbar-default" role="navigation">
+  <div class="container">
+</div><!-- /.container --> 
+</nav>
+
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
