--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,6 @@
-<nav class="navbar navbar navbar-default" role="navigation">
-  <nav class="navbar navbar-static-top navbar-default" role="navigation">
+<nav class="navbar navbar-static-top navbar-default" role="navigation">
   <div class="container">
-</div><!-- /.container --> 
-</nav>
-
-  <!-- Brand and toggle get grouped for better mobile display -->
+    <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
       <span class="sr-only">Toggle navigation</span>
@@ -12,7 +8,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">Pinteresting</a>
+    <% link_to "Pinteresting", root_path %>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
@@ -22,4 +18,5 @@
       <li><%= link_to "About", about_path %></li> 
     </ul>
   </div><!-- /.navbar-collapse -->
+  </div><!-- /.container --> 
 </nav>
