--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Description</th>
-      <th>User_id</th>
+      <th>User</th>
     </tr>
   </thead>
 
@@ -14,10 +14,12 @@
     <% @pins.each do |pin| %>
       <tr>
         <td><%= pin.description %></td>
-        <td><%= pin.user_id %></td>
-        <td><%= link_to 'Show', pin %></td>
-        <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
-        <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= pin.user.email if pin.user %></td>
+        <td><%= link_to 'Show', pin_path(pin) %></td>
+        <% if pin.user == current_user %>
+          <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
+          <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
@@ -25,4 +27,6 @@
 
 <br>
 
-<%= link_to 'New Pin', new_pin_path %>
+<% if user_signed_? %>
+  <%= link_to 'New Pin', new_pin_path %>
+  <% end %>
