--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>Image</th>
       <th>Description</th>
       <th>User</th>
     </tr>
@@ -13,6 +14,7 @@
   <tbody>
     <% @pins.each do |pin| %>
       <tr>
+        <td><%= image_tag pin.image.url(:medium) %></td>
         <td><%= pin.description %></td>
         <td><%= pin.user.email if pin.user %></td>
         <td><%= link_to 'Show', pin_path(pin) %></td>
@@ -27,6 +29,6 @@
 
 <br>
 
-<% if user_signed_? %>
+<% if user_signed_in? %>
   <%= link_to 'New Pin', new_pin_path %>
   <% end %>
