--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -17,3 +17,8 @@ $jumbotron-bg:                          white;
 .navbar-brand {
      font-weight: bold;
 }
+
+.new_user input [type='checkbox'] {
+		margin-left: 0px;
+}
+	
